[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyboy"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tomas Gustavsson", email = "tomplast@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["loguru", "pygame"]

[project.urls]
Documentation = "https://github.com/Tomas Gustavsson/pyboy#readme"
Issues = "https://github.com/Tomas Gustavsson/pyboy/issues"
Source = "https://github.com/Tomas Gustavsson/pyboy"

[tool.hatch.version]
path = "src/pyboy/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyboy tests}"

[tool.coverage.run]
source_pkgs = ["pyboy", "tests"]
branch = true
parallel = true
omit = [
  "src/pyboy/__about__.py",
]

[tool.coverage.paths]
pyboy = ["src/pyboy", "*/pyboy/src/pyboy"]
tests = ["tests", "*/pyboy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
